[gd_scene load_steps=12 format=2]

[ext_resource path="res://Src/Assets/NPCs/TacticalIdle.png" type="Texture" id=1]
[ext_resource path="res://Src/Assets/NPCs/TacticalResponseArmoredSuitGasMask.png" type="Texture" id=2]
[ext_resource path="res://Src/NonPlayer/NPCS/TacticalResponseGasMaskIdle.gd" type="Script" id=3]
[ext_resource path="res://Src/Assets/Enemies/Icons/TacticalResponseTeam_CBRN_icon.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 96 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 13.0384

[sub_resource type="CircleShape2D" id=12]
radius = 593.742

[node name="TacticalResponseGasMaskIdle" type="StaticBody2D"]
script = ExtResource( 3 )
enemy_texture = ExtResource( 4 )

[node name="TacticalResponseIdle-Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -47 )
frames = SubResource( 10 )
animation = "IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 11 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 12 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="input_event" from="DetectPlayer" to="." method="_on_DetectPlayer_input_event"]
